--- a/info.html
+++ b/info.html
@@ -34,7 +34,7 @@
             
             <nav role="navigation" id="dropDown">
                 <button onclick="dropDownMenu()" class="dropDnBtn">MENU</button>
-                    <ul class="dropDownContent">
+                    <ul id="dropDownList" class="dropDownContent">
                         <li><a href="home.html">HOME</a></li>
                         <li><a href="explore.html">EXPLORE</a></li>
                         <li><a href="exhibition.html">EXHIBITION</a></li>
