updated html files

--- a/dresshoe.html
+++ b/dresshoe.html
@@ -24,7 +24,8 @@
             <li class="menuitem" id="highlight"><a href="dress.html">Dress</a></li>
             <li class="menuitem"><a href="outgoing.html">Outgoing</a></li>
             <li class="menuitem"><a href="about.html">About</a></li>
-            <li class="menuitem"><a href="info.html" >Info</a></li>    
+            <li class="menuitem"><a href="info.html" >Info</a></li>
+            <li class="menuitem"><a href="signin_signup.html" >Sign In / Sign Up</a></li>
         </ul>
     </nav>
     
