--- a/checkout.html
+++ b/checkout.html
@@ -23,7 +23,8 @@
             <li class="menuitem"><a href="dress.html">Dress</a></li>
             <li class="menuitem"><a href="outgoing.html">Outgoing</a></li>
             <li class="menuitem"><a href="about.html">About</a></li>
-            <li class="menuitem"><a href="info.html" >Info</a></li>    
+            <li class="menuitem"><a href="info.html" >Info</a></li>
+            <li class="menuitem"><a href="signin_signup.html" >Sign In / Sign Up</a></li>
         </ul>
     </nav>
     
