updated html and css.
Deleted dress.html and outgoing.html

--- a/basket.html
+++ b/basket.html
@@ -20,8 +20,7 @@
     
     <nav role ="navigation" id="topmenu">
         <ul>
-            <li class="menuitem"><a href="dress.html">Dress</a></li>
-            <li class="menuitem"><a href="outgoing.html">Outgoing</a></li>
+            <li class="menuitem"><a href="shoes.html">Shoes</a></li>
             <li class="menuitem"><a href="about.html">About</a></li>
             <li class="menuitem"><a href="info.html" >Info</a></li>
             <li class="menuitem"><a href="signin_signup.html" >Sign In / Sign Up</a></li>
@@ -42,7 +41,7 @@
     <article role="article" id="cart_basket">
         <section id="basket">
             <h2>Basket</h2>
-            <a href="dress.html"><button role="button">Continue Shopping</button></a>
+            <a href="shoes.html"><button role="button">Continue Shopping</button></a>
             <p>Empty Basket</p>
         </section>
         
