--- a/dresshoe.html
+++ b/dresshoe.html
@@ -21,8 +21,7 @@
     
     <nav role ="navigation" id="topmenu">
         <ul>
-            <li class="menuitem" id="highlight"><a href="dress.html">Dress</a></li>
-            <li class="menuitem"><a href="outgoing.html">Outgoing</a></li>
+            <li class="menuitem" id="highlight"><a href="shoes.html">Shoes</a></li>
             <li class="menuitem"><a href="about.html">About</a></li>
             <li class="menuitem"><a href="info.html" >Info</a></li>
             <li class="menuitem"><a href="signin_signup.html" >Sign In / Sign Up</a></li>
@@ -37,7 +36,7 @@
     <div id="breadcrumb">
     <a href="index.html">Home</a>
     <a>&rArr;</a>
-    <a href="dress.html">Dress</a>
+    <a href="shoes.html">Shoes</a>
     <a>&rArr;</a>
     <a>Bashful Brogue</a>
     </div>
