--- a/hikingshoe.html
+++ b/hikingshoe.html
@@ -20,8 +20,7 @@
     
     <nav role ="navigation" id="topmenu">
         <ul>
-            <li class="menuitem"><a href="dress.html">Dress</a></li>
-            <li class="menuitem" id="highlight"><a href="outgoing.html">Outgoing</a></li>
+            <li class="menuitem" id="highlight"><a href="shoes.html">Shoes</a></li>
             <li class="menuitem"><a href="about.html">About</a></li>
             <li class="menuitem"><a href="info.html" >Info</a></li>
             <li class="menuitem"><a href="signin_signup.html" >Sign In / Sign Up</a></li>
@@ -35,7 +34,7 @@
     <div id="breadcrumb">
     <a href="index.html">Home</a>
     <a>&rArr;</a>
-    <a href="outgoing.html">Outgoing</a>
+    <a href="shoes.html">Shoes</a>
     <a>&rArr;</a>
     <a>Hardy Hiker</a>
     </div>
