--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     
     <nav role ="navigation" id="topmenu">
         <ul>
-            <li class="menuitem"><a href="dress.html">Dress</a></li>
-            <li class="menuitem"><a href="outgoing.html">Outgoing</a></li>
+            <li class="menuitem"><a href="shoes.html">Shoes</a></li>
             <li class="menuitem"><a href="about.html">About</a></li>
             <li class="menuitem"><a href="info.html" >Info</a></li>
             <li class="menuitem"><a href="signin_signup.html" >Sign In / Sign Up</a></li>
